--- a/src/browse.html
+++ b/src/browse.html
@@ -21,16 +21,14 @@
                         <option value="team" selected>Team</option>
                         <option value="match">Match</option>
                     </select><br>
-                    <input type="tel" id="number" required><br>
-                    <fieldset><br>
-                        <label>Event Code: </label><br>
-                        <select id="event">
-                            <option value="CADA">CADA - Sacramento Regional</option>
-                            <option value="CASJ">CASJ - Silicon Valley Regional</option>
-                            <option value="WOOD">WOOD - CalGames</option>
-                            <option value="CCCC" selected>CCCC - Capital City Classic</option>
-                        </select>
-                    </fieldset>
+                    <input type="tel" id="number" required><br><br>
+                    <label>Event Code: </label><br>
+                    <select id="event">
+                        <option value="CADA">CADA - Sacramento Regional</option>
+                        <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                        <option value="WOOD">WOOD - CalGames</option>
+                        <option value="CCCC" selected>CCCC - Capital City Classic</option>
+                    </select><br><br>
                     <button type="button" class="uiButton actionButton" onclick="callSearch()" id="searchBtn">Search</button><br>
                     <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
                 </fieldset>
