--- a/src/pointRecords.html
+++ b/src/pointRecords.html
@@ -15,12 +15,10 @@
         <script>themeHandle()</script>
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">point records</span></h1>
-                <fieldset>
-                    <fieldset><table><tr id="preInsert"><th>Description</th><th>Amount</th><th>Timestamp</th></tr></table></fieldset>
-                    <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
-                    <button type="button" class="uiButton returnButton" onclick="window.location.href='/points'">Back</button>
-                </fieldset>
+                <h1 class="w3">bearTracks<br><span class="gametitle">point records</span></h1><br>
+                <table><tr id="preInsert"><th>Description</th><th>Amount</th><th>Timestamp</th></tr></table><br>
+                <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button>
+                <button type="button" class="uiButton returnButton" onclick="window.location.href='/points'">Back</button>
             </div>
         </div>
         <script type="module" src="js/pointRecords/pointRecords.min.js"></script>
