--- a/src/points.html
+++ b/src/points.html
@@ -18,8 +18,7 @@
                 <div style="display: flex; flex-direction: column;">
                     <a href="spin" class="gameflair1 bigLink">spin thing</a><br>
                     <a href="blackjack" class="gameflair1 bigLink">blackjack</a><br>
-                </div>
-                <br>
+                </div><br>
                 <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button><br><br>
                 <small style="text-align: center;"><a href="pointRecords" class="actLink">points records</a></small>
             </div>
