--- a/src/manage.html
+++ b/src/manage.html
@@ -13,15 +13,13 @@
     <body class="dark-mode">
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;">
-            <form>
+            <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">manage data</span></h1>
-                <fieldset>
-                    <button type="button" class="uiButton actionButton" onclick="getSubmissionData()" id="viewData">View Data</button><br>
-                    <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
-                </fieldset>
-                <small style="text-align: center;"><a href="manageScouts" style="all: unset; color: var(--gameFlairColor);">manage scouts</a></small><br>
-                <small style="text-align: center;"><a href="manageTeams" style="all: unset; color: var(--gameFlairColor);">manage teams</a></small><br>
-            </form><br><br>
+                <button type="button" class="uiButton actionButton" onclick="getSubmissionData()" id="viewData">View Data</button>
+                <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
+                <small style="text-align: center; margin-top: 3vh;"><a href="manageScouts" style="all: unset; color: var(--gameFlairColor);">manage scouts</a></small>
+                <small style="text-align: center; margin-top: 1vh"><a href="manageTeams" style="all: unset; color: var(--gameFlairColor);">manage teams</a></small>
+            </div><br><br>
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
