--- a/src/scouts.html
+++ b/src/scouts.html
@@ -16,11 +16,9 @@
         <div class="container" id="results" style="display: flex;">
             <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">scouts</span></h1>
-                <fieldset>
-                    <fieldset><h3 id="eventCodeDisplay"></h3><table><tr id="preInsert"><th>Scout Name</th><th>Score</th></tr></table></fieldset>
-                    <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
-                    <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
-                </fieldset>
+                <h3 id="eventCodeDisplay"></h3><table><tr id="preInsert"><th>Scout Name</th><th>Score</th></tr></table><br>
+                <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
+                <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
             </div>
         </div>
         <script type="module" src="js/scouts/scouts.min.js"></script>
