--- a/src/scouts.html
+++ b/src/scouts.html
@@ -17,7 +17,7 @@
             <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">scouts</span></h1>
                 <h3 id="eventCodeDisplay"></h3><table><tr id="preInsert"><th>Scout Name</th><th>Score</th></tr></table><br>
-                <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
+                <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button>
                 <button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button>
             </div>
         </div>
