--- a/src/login.html
+++ b/src/login.html
@@ -11,7 +11,7 @@
         <link rel="apple-touch-startup-image" href="public/launch.png">
         <script src="js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode centerText" onload="displayErrors()">
+    <body class="dark-mode centerText">
         <script>themeHandle()</script>
         <div class="container">
             <div class="dummy">
@@ -19,13 +19,12 @@
                 <div class="login">
                     <div id="currentUsername"><p class="unField">welcome back to hell</p><h2 class="unValue">please log in</h2></div>
                     <h3 id="error" style="color: var(--cancelColor);"></h3>
-                    <input type="text" id="inputInfo" autocomplete="username" placeholder="username" class="ci">
+                    <input type="text" id="inputInfo" autocomplete="username" placeholder="username" class="ci"/><input type="password" id="inputPassword" autocomplete="current-password" placeholder="password" class="ci" style="display: none;"/>
                     <div class="buttonCont">
                         <button id="pw" class="uiButton actionButton nextButton submitButton" style="display: none;"></button>
                         <button id="next" class="uiButton returnButton nextButton"></button>
                     </div>
-                </div>
-                <br><br>
+                </div><br><br>
                 <small style="text-align: center;" id="createAct" class="moveDown"><a href="create" class="actLink">create account</a></small><br>
                 <form style="display: none;" action="/loginForm" target="_self" method="POST" id="artForm"><input name="username" id="artUsername" hidden><input name="password" id="artPassword" hidden></form>
             </div>
