--- a/src/login.html
+++ b/src/login.html
@@ -16,17 +16,16 @@
         <div class="container">
             <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <div class="login">
+                <form class="login" action="/loginForm" target="_self" method="POST">
                     <div id="currentUsername"><p class="unField">welcome back to hell</p><h2 class="unValue">please log in</h2></div>
                     <h3 id="error" style="color: var(--cancelColor);"></h3>
-                    <input type="text" id="inputInfo" autocomplete="username" placeholder="username" class="ci"/><input type="password" id="inputPassword" autocomplete="current-password" placeholder="password" class="ci" style="display: none;"/>
+                    <input type="text" id="inputInfo" autocomplete="username" placeholder="username" class="ci" name="username"/><input type="password" id="inputPassword" autocomplete="current-password" placeholder="password"name="password" class="ci" style="display: none;"/>
                     <div class="buttonCont">
-                        <button id="pw" class="uiButton actionButton nextButton submitButton" style="display: none;"></button>
+                        <button id="pw" class="uiButton actionButton nextButton submitButton" style="display: none;" type="submit"></button>
                         <button id="next" class="uiButton returnButton nextButton"></button>
                     </div>
                 </div><br><br>
                 <small style="text-align: center;" id="createAct" class="moveDown"><a href="create" class="actLink">create account</a></small><br>
-                <form style="display: none;" action="/loginForm" target="_self" method="POST" id="artForm"><input name="username" id="artUsername" hidden><input name="password" id="artPassword" hidden></form>
             </div>
         </div>
         <script src="https://unpkg.com/@simplewebauthn/browser@8.3.4/dist/bundle/index.umd.min.js" integrity="sha384-7FvcOpf85HsGS89sLrvOOHZYqgaEqbfUi87HhpbqbndTSFw+XpzbDMK5ZcxD28fe" crossorigin="anonymous"></script>
