--- a/src/login.html
+++ b/src/login.html
@@ -21,10 +21,10 @@
                     <h3 id="error" style="color: var(--cancelColor);"></h3>
                     <input type="text" id="inputInfo" autocomplete="username" placeholder="username" class="ci" name="username"/><input type="password" id="inputPassword" autocomplete="current-password" placeholder="password"name="password" class="ci" style="display: none;"/>
                     <div class="buttonCont">
-                        <button id="pw" class="uiButton actionButton nextButton submitButton" style="display: none;" type="submit"></button>
-                        <button id="next" class="uiButton returnButton nextButton"></button>
+                        <button id="pw" class="uiButton actionButton nextButton submitButton" style="display: none;" type="submit" disabled="disabled"></button>
+                        <button id="next" class="uiButton returnButton nextButton" type="button"></button>
                     </div>
-                </div><br><br>
+                </form><br><br>
                 <small style="text-align: center;" id="createAct" class="moveDown"><a href="create" class="actLink">create account</a></small><br>
             </div>
         </div>
