--- a/src/create.html
+++ b/src/create.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
+        <link rel="stylesheet" href="css/create.css" type="text/css">
         <script src="js/form/form.min.js"></script>
     </head>
     <body class="dark-mode centerText" onload="displayCreateErrors()">
@@ -15,9 +16,8 @@
             <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
                 <form action="/createAccount" target="_self" method="POST">
-                    <h2 style="margin-top: 0; margin-bottom: 2rem">Create Account</h2>
-                    <h4 style="color: var(--cancelColor); display: none;" id="error"></h4>
-                    <label for="access">Team Join Code</label><br><input type="tel" name="access" class="credInput" required><br><br>
+                    <h2 style="margin-top: 0; margin-bottom: 2rem">Create Account</h2><h4 style="color: var(--cancelColor); display: none;" id="error"></h4><input type="hidden" name="access">
+                    <label for="access">Team Join Code</label><br><div class="joinCodeBox"><input id="cB0" type="number" kind="join" maxlength="1"/><input id="cB1" type="number" kind="join" maxlength="1"/><input id="cB2" type="number" kind="join" maxlength="1"/><input id="cB3" type="number" kind="join" maxlength="1"/><input id="cB4" type="number" kind="join" maxlength="1"/></div><br><br>
                     <label for="fullName">Full Name</label><br><input type="text" name="fullName" autocomplete="name" class="credInput" required><br><br>
                     <label for="nickName">Username (identifiable)</label><br><input type="text" name="username" autocomplete="username" class="credInput" autocapitalize="none" required><br><br>
                     <label for="password">Password</label><br><input type="password" name="password" autocomplete="new-password" class="credInput" minlength="8" maxlength="2048" required><br><br><br>
