secured endpointsgit add --all

--- a/static/login.html
+++ b/static/login.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Login - bearTracks</title>
-        <meta name="robots" content="nositelinkssearchbox, nofollow">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="theme-color" content="#121212" id="themeMeta">
-        <link rel="stylesheet" href="css/float.min.css" type="text/css">
-        <link rel="stylesheet" href="css/login.min.css" type="text/css">
-        <link rel="apple-touch-startup-image" href="public/launch.png">
-        <script src="js/form/form.min.js"></script>
-    </head>
+    <head><meta charset="utf-8"><title>Login - bearTracks</title><meta name="robots" content="nositelinkssearchbox, nofollow"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="theme-color" content="#121212" id="themeMeta"><link rel="stylesheet" href="css/float.min.css" type="text/css"><link rel="stylesheet" href="css/login.min.css" type="text/css"><link rel="apple-touch-startup-image" href="public/launch.png"><script src="js/form/form.min.js"></script></head>
     <body class="dark-mode centerText" onload="displayErrors()">
         <script>themeHandle()</script>
         <div class="container">
@@ -28,7 +18,6 @@
                 <small style="text-align: center;" id="createAct" class="moveDown"><a href="create" class="actLink">create account</a></small><br>
             </div>
         </div>
-        <script src="https://unpkg.com/@simplewebauthn/browser@8.3.4/dist/bundle/index.umd.min.js" integrity="sha384-7FvcOpf85HsGS89sLrvOOHZYqgaEqbfUi87HhpbqbndTSFw+XpzbDMK5ZcxD28fe" crossorigin="anonymous"></script>
         <script type="module" src="js/login/login.min.js"></script>
     </body>
 </html>
