--- a/static/login.html
+++ b/static/login.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head><meta charset="utf-8"><title>Login - bearTracks</title><meta name="robots" content="nositelinkssearchbox, nofollow"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="theme-color" content="#121212" id="themeMeta"><link rel="stylesheet" href="css/float.min.css" type="text/css"><link rel="stylesheet" href="css/login.min.css" type="text/css"><link rel="apple-touch-startup-image" href="public/launch.png"><script src="js/form/form.min.js"></script></head>
-    <body class="dark-mode centerText" onload="displayErrors()">
+    <body class="dark-mode centerText">
         <script>themeHandle()</script>
         <div class="container">
             <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <form class="login" action="/login" target="_self" method="POST">
+                <form class="login" action="/api/v1/auth/login" target="_self" method="POST">
                     <div id="currentUsername"><p class="unField">welcome back to hell</p><h2 class="unValue">please log in</h2></div>
                     <h3 id="error" style="color: var(--cancelColor);"></h3>
                     <input type="text" id="inputInfo" autocomplete="username" placeholder="username" class="ci" name="username"/><input type="password" id="inputPassword" autocomplete="current-password" placeholder="password"name="password" class="ci" style="display: none;"/>
