--- a/static/login.html
+++ b/static/login.html
@@ -6,12 +6,12 @@
         <div class="container">
             <div class="dummy">
                 <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <form class="login" action="/api/v1/auth/login" target="_self" method="POST">
+                <form class="login">
                     <div id="currentUsername"><p class="unField">welcome back to hell</p><h2 class="unValue">please log in</h2></div>
                     <h3 id="error" style="color: var(--cancelColor);"></h3>
                     <input type="text" id="inputInfo" autocomplete="username" placeholder="username" class="ci" name="username"/><input type="password" id="inputPassword" autocomplete="current-password" placeholder="password"name="password" class="ci" style="display: none;"/>
                     <div class="buttonCont">
-                        <button id="pw" class="uiButton actionButton nextButton submitButton" style="display: none;" type="submit" disabled="disabled"></button>
+                        <button id="pw" class="uiButton actionButton nextButton submitButton" style="display: none;" type="button" disabled="disabled"></button>
                         <button id="next" class="uiButton returnButton nextButton" type="button"></button>
                     </div>
                 </form><br><br>
