programmed in a middle seat
GONE WRONG

--- a/static/spin.html
+++ b/static/spin.html
@@ -8,7 +8,7 @@
         <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="static/css/float.min.css" type="text/css">
         <link rel="stylesheet" href="static/css/supplement.min.css" type="text/css">
-        <link rel="stylesheet" href="assets/spin.min.css" type="text/css">
+        <link rel="stylesheet" href="static/assets/spin.min.css" type="text/css">
         <script src="static/js/form/form.min.js"></script>
     </head>
     <body class="dark-mode">
