i done did passkeys

--- a/static/settings.html
+++ b/static/settings.html
@@ -16,6 +16,7 @@
             <div class="dummy" style="min-width: 250px;">
                 <h1 class="w3">bearTracks<br><span class="gametitle">settings</span></h1>
                 <button class="settingOpt std" id="changeTheme"><p>Switch Theme</p></button><br><br>
+                <button class="settingOpt std" onclick="window.location.href = '/passkey'"><p>Register Passkey</p></button><br><br>
                 <button class="settingOpt danger" onclick="window.location.href='logout'"><p>Log Out</p></button>
                 <button class="settingOpt danger noBdr" onclick="window.location.href='clearCookies'"><p>Reset Cookies</p></button><br>
                 <button class="settingOpt plain" onclick="window.location.href='/'"><p>Back</p></button>
