--- a/static/login.html
+++ b/static/login.html
@@ -1,23 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head><meta charset="utf-8"><title>Login - bearTracks</title><meta name="robots" content="nositelinkssearchbox, nofollow"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="theme-color" content="#121212" id="themeMeta"><link rel="stylesheet" href="static/css/float.min.css" type="text/css"><link rel="stylesheet" href="static/css/login.min.css" type="text/css"><link rel="apple-touch-startup-image" href="public/launch.png"><script src="static/js/form/form.min.js"></script></head>
-    <body class="dark-mode centerText">
-        <script>themeHandle()</script>
-        <div class="container">
-            <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
-                <form class="login">
-                    <div id="currentUsername"><p class="unField">welcome back to hell</p><h2 class="unValue">please log in</h2></div>
-                    <h3 id="error" style="color: var(--cancelColor);"></h3>
-                    <input type="text" id="inputInfo" autocomplete="username" placeholder="username" class="ci" name="username"/><input type="password" id="inputPassword" autocomplete="current-password" placeholder="password"name="password" class="ci" style="display: none;"/>
-                    <div class="buttonCont">
-                        <button id="pw" class="uiButton actionButton nextButton submitButton" style="display: none;" type="button" disabled="disabled"></button>
-                        <button id="next" class="uiButton returnButton nextButton" type="button"></button>
-                    </div>
-                </form><br><br>
-                <small style="text-align: center;" id="createAct" class="moveDown"><a href="create" class="actLink">create account</a></small><br>
-            </div>
-        </div>
-        <script type="module" src="static/js/login/login.min.js"></script>
-    </body>
-</html>
+<!DOCTYPE html><html lang="en" style="background-color: #282828;"><head><meta charset="utf8"><title></title><meta name="theme-color" content="#282828"><meta name="description" content=""><link rel="stylesheet" href="">
+<script type="module">
+    import init, { run_app } from '/static/wasm/webauthn_login.js';
+    async function main() {
+        await init('/static/wasm/webauthn_login.wasm');
+        run_app();
+    }
+    main()
+</script></head><body><p>loading web assembly...</p></body></html>
