--- a/static/charts.html
+++ b/static/charts.html
@@ -34,7 +34,7 @@
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CRESCENDO</span></h1>
                 <h4>Team Graphs</h4><br>
                 <h3 id="teamAtEvent"></h3>
                 <div class="tocCont">
