--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>CHARGED UP Scouting - bearTracks</title>
+        <title>CRESCENDO Scouting - bearTracks</title>
         <meta name="robots" content="nositelinkssearchbox, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#121212" id="themeMeta">
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="offlineAlert" id="offlineAlert" style="display: none"><span class="closeAlert" onclick="this.parentElement.classList.add('fadeout');">&times;</span> You are offline</div>
             <div>
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1><br>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CRESCENDO</span></h1><br>
                 <div style="display: flex; flex-direction: column;">
                     <a href="main" class="gameflair1" style="order: 1; margin-bottom: 5%;">match scouting<br></a>
                     <a href="matches" class="gameflair1" style="order: 2; margin-bottom: 5%;">match list<br></a>
