--- a/static/manage.html
+++ b/static/manage.html
@@ -23,7 +23,7 @@
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CRESCENDO</span></h1>
                 <h4>Manage Data</h4><br>
                 <fieldset id="resultsInsert"><button type="button" class="uiButton returnButton" onclick="newSearch()">New Search</button><br><button type="button" class="uiButton returnButton" onclick="window.location.href='/'">Back</button></fieldset><br><br>
             </div>
