--- a/static/teams.html
+++ b/static/teams.html
@@ -30,7 +30,7 @@
         </div>
         <div class="container" id="results" style="display: none;">
             <div class="dummy">
-                <h1 class="w3">bearTracks<br><span class="gametitle">CHARGED UP</span></h1>
+                <h1 class="w3">bearTracks<br><span class="gametitle">CRESCENDO</span></h1>
                 <h4>Match Data</h4>
                 <fieldset>
                     <fieldset>
