--- a/static/matches.html
+++ b/static/matches.html
@@ -17,10 +17,8 @@
                 <h1 class="w3">bearTracks<br><span class="gametitle">Matches</span></h1><br><br>
                 <label>Event Code: </label><br>
                 <select name="event" id="eventCode">
-                    <option value="CADA">CADA - Sacramento Regional</option>
-                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
-                    <option value="WOOD">WOOD - CalGames</option>
-                    <option value="CCCC" selected>CCCC - Capital City Classic</option>
+                    <option value="CAFR" selected>CADA - Central Valley Regional</option>
+                    <option value="CABE">CASJ - East Bay Regional</option>
                 </select><br><br>
                 <label>Include All Matches: </label><input id="allmatch" type="checkbox"><br>
                 <button type="button" class="uiButton actionButton" id="viewMatchButton" onclick="getMatches()">View</button><br>
