--- a/static/spin.html
+++ b/static/spin.html
@@ -5,13 +5,13 @@
         <title>Spinner - bearTracks</title>
         <meta name="robots" content="nositelinkssearchbox, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="theme-color" content="#121212" id="themeMeta">
+        <meta name="theme-color" content="#282828" id="themeMeta">
         <link rel="stylesheet" href="static/css/float.min.css" type="text/css">
         <link rel="stylesheet" href="static/css/supplement.min.css" type="text/css">
         <link rel="stylesheet" href="static/assets/spin.min.css" type="text/css">
         <script src="static/js/form/form.min.js"></script>
     </head>
-    <body class="dark-mode">
+    <body class="gruvbox">
         <script>themeHandle()</script>
         <div class="container" id="search" style="display: flex;"> 
             <div>
