remove main form for now

--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
             <div>
                 <h1 class="w3">bearTracks<br><span class="gametitle">CRESCENDO</span></h1>
                 <div style="display: flex; flex-direction: column;">
-                    <div style="order: 0"><a style="order: 0" class="gameflair1" href="main">scout</a>
+                    <!--<div style="order: 0"><a style="order: 0" class="gameflair1" href="main">scout</a>-->
                     <div style="order: 1"></div><a style="order: 1" class="gameflair1" href="scouts">ranks</a>
                     <div style="order: 2"><a style="order: 2" class="gameflair1" href="points">points</a>
                     <div style="order: 4; margin-top: 2rem"><small><a href="settings" style="all: unset;">settings</a></small></div>
