--- a/static/create.html
+++ b/static/create.html
@@ -5,7 +5,7 @@
         <title>Create Account - bearTracks</title>
         <meta name="robots" content="nositelinkssearchbox, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="theme-color" content="#121212" id="themeMeta">
+        <meta name="theme-color" content="#282828" id="themeMeta">
         <link rel="stylesheet" href="static/css/float.min.css" type="text/css">
         <link rel="stylesheet" href="static/css/create.css" type="text/css">
         <script src="static/js/form/form.min.js"></script>
@@ -17,9 +17,9 @@
                 <h1 class="w3">bearTracks<br><span class="gametitle">CRESCENDO</span></h1>
                 <form>
                     <h2 style="margin-top: 0; margin-bottom: 2rem">Create Account</h2><h4 style="color: var(--cancelColor); display: none;" id="error"></h4><input type="hidden" name="access">
-                    <label for="access">Team Join Code</label><br><div class="joinCodeBox"><input id="cB0" type="number" kind="join" maxlength="1"/><input id="cB1" type="number" kind="join" maxlength="1"/><input id="cB2" type="number" kind="join" maxlength="1"/><input id="cB3" type="number" kind="join" maxlength="1"/><input id="cB4" type="number" kind="join" maxlength="1"/></div><br><br>
+                    <label for="access">Team Join Code</label><br><small>00000 for no team</small><br><div class="joinCodeBox"><input id="cB0" type="number" kind="join" maxlength="1"/><input id="cB1" type="number" kind="join" maxlength="1"/><input id="cB2" type="number" kind="join" maxlength="1"/><input id="cB3" type="number" kind="join" maxlength="1"/><input id="cB4" type="number" kind="join" maxlength="1"/></div><br><br>
                     <label for="full_name">Full Name</label><br><input type="text" name="full_name" autocomplete="name" class="credInput" required><br><br>
-                    <label for="username">Username (identifiable)</label><br><input type="text" name="username" autocomplete="username" class="credInput" autocapitalize="none" required><br><br>
+                    <label for="username">Username</label><br><input type="text" name="username" autocomplete="username" class="credInput" autocapitalize="none" required><br><br>
                     <label for="password">Password</label><br><input type="password" name="password" autocomplete="new-password" class="credInput" minlength="8" maxlength="32" required><br><br><br>
                     <button type="button" class="uiButton actionButton" id="create_button">Create Account</button>
                 </form>
