--- a/static/main.html
+++ b/static/main.html
@@ -6,6 +6,10 @@
         <meta name="robots" content="nositelinkssearchbox, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#282828" id="themeMeta">
+        <meta name="full-screen" content="yes">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-title" content="bearTracks">
         <link rel="stylesheet" href="static/css/float.min.css" type="text/css">
         <link rel="stylesheet" href="static/css/homepage.min.css" type="text/css">
         <link rel="stylesheet" href="static/css/main_form.min.css" type="text/css">
