--- a/static/index.html
+++ b/static/index.html
@@ -7,10 +7,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#282828" id="themeMeta">
         <meta name="full-screen" content="yes">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=504">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=504">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=504">
+        <link rel="manifest" href="/site.webmanifest?v=504">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg?v=504" color="#009698">
+        <link rel="shortcut icon" href="/favicon.ico?v=504">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-title" content="bearTracks">
-        <link rel="icon" href="favicon.ico?v=2"/>
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="application-name" content="bearTracks">
         <link rel="stylesheet" href="static/css/float.min.css" type="text/css">
         <link rel="stylesheet" href="static/css/homepage.min.css" type="text/css">
         <script src="static/js/form/form.min.js"></script>
