--- a/static/main.html
+++ b/static/main.html
@@ -6,10 +6,14 @@
         <meta name="robots" content="nositelinkssearchbox, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="theme-color" content="#282828" id="themeMeta">
-        <meta name="full-screen" content="yes">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=504">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=504">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=504">
+        <link rel="manifest" href="/site.webmanifest?v=504">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg?v=504" color="#009698">
+        <link rel="shortcut icon" href="/favicon.ico?v=504">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-title" content="bearTracks">
         <link rel="stylesheet" href="static/css/float.min.css" type="text/css">
         <link rel="stylesheet" href="static/css/homepage.min.css" type="text/css">
         <link rel="stylesheet" href="static/css/main_form.min.css" type="text/css">
@@ -27,11 +31,11 @@
                         </fieldset><br>
                         <fieldset>
                             <label>Match Number&emsp;</label>
-                            <select name="match" id="match_num_input" style="min-width: 250px;"></select>
+                            <select name="match" id="match_num_input"></select>
                         </fieldset><br>
                         <fieldset>
                             <label>Team Number&emsp;</label>
-                            <select name="team" id="team_number" style="min-width: 250px;">
+                            <select name="team" id="team_number">
                                 <optgroup label="Blue Alliance">
                                     <option value="" class="teamNumOption"></option>
                                     <option value="" class="teamNumOption"></option>
