--- a/static/main.html
+++ b/static/main.html
@@ -56,15 +56,15 @@
                         <div class="HStack">
                             <div class="VStack">
                                 <h1 class="counter">0.0</h1>
-                                <button class="time_button" type="button"><h1>intake</h1></button>
+                                <button class="time_button" type="button"><h1>in</h1></button>
                             </div>
                             <div class="VStack">
                                 <h1 class="counter">0.0</h1>
-                                <button class="time_button" type="button"><h1>travel</h1></button>
+                                <button class="time_button" type="button"><h1>move</h1></button>
                             </div>
                             <div class="VStack">
                                 <h1 class="counter">0.0</h1>
-                                <button class="time_button" type="button"><h1>outtake</h1></button>
+                                <button class="time_button" type="button"><h1>out</h1></button>
                             </div>
                         </div>
                         <button class="cycle_button" type="button" style="margin-top: 3vh; margin-bottom: 1vh"><h1>speaker</h1></button>
