--- a/static/create.html
+++ b/static/create.html
@@ -20,7 +20,7 @@
                     <label for="access">Team Join Code</label><br><small>00000 for no team</small><br><div class="joinCodeBox"><input id="cB0" type="number" kind="join" maxlength="1"/><input id="cB1" type="number" kind="join" maxlength="1"/><input id="cB2" type="number" kind="join" maxlength="1"/><input id="cB3" type="number" kind="join" maxlength="1"/><input id="cB4" type="number" kind="join" maxlength="1"/></div><br><br>
                     <label for="full_name">Full Name</label><br><input type="text" name="full_name" autocomplete="name" class="credInput" required><br><br>
                     <label for="username">Username</label><br><input type="text" name="username" autocomplete="username" class="credInput" autocapitalize="none" required><br><br>
-                    <label for="password">Password</label><br><input type="password" name="password" autocomplete="new-password" class="credInput" minlength="8" maxlength="32" required><br><br><br>
+                    <label for="password">Password</label><br><input type="password" name="password" autocomplete="new-password" class="credInput" autocapitalize="off" minlength="8" maxlength="32" required><br><br><br>
                     <button type="button" class="uiButton actionButton" id="create_button">Create Account</button>
                 </form>
             </div>
